index.css
.sticky {
  position: sticky;
  top: 0;
  background-color: white;
  padding-bottom: 5px;
  padding-top: 5px;
}

.row {
  display: flex;
}

.column {
  margin: 0;
  flex: 1 1 0px;
  flex-grow: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin-inline: 10px;
}

.left {
  align-items: flex-start;
}

.center {
  align-items: center;
}

.right {
  align-items: flex-end;
}

.nav {
  display: flex;
  margin-inline: 0;
  flex-wrap: wrap;
}

.nav a, .nav a:link {
  border-right: 2px solid black;
  padding-inline: 1em;
  color: black;
  text-decoration: None;
}

.nav a:nth-child(1) {
  padding-left: 0;
}

.nav a:nth-child(3) {
  border-right: 0;
  padding-right: 0;
}

.large {
  font-size: 15px;
}

.content {
  margin-inline: 0px;
}

.carousel {
  display: flex;
  overflow-x: scroll;
  scroll-snap-type: x mandatory;
  scrollbar-width: none;
  scroll-behavior: smooth;
  margin-inline: 10px;
  min-height: 25vh;
}

.carousel::-webkit-scrollbar {
  display: none;
}

.carousel-nav {
  display: flex;
  justify-content: center;
  margin-top: 10px;
}

.scroll-jump {
  background-color: lightgrey;
  border-radius: 12px;
  padding-inline: 1em;
  color: black;
  text-decoration: none;
}

.scroll-jump:active {
  background-color: grey;
}

.project {
  flex-shrink: 0;
  scroll-snap-align: center;
  width: 100%;
}

.project img {
  max-height: 33vh;
  max-width: 100%;
}

.project.column {
  width: 50%;
  height: 100%;
}

body {
  font-family: monospace;
}

p {
  margin-top: 5px;
  margin-bottom: 5px;
}

h1 {
  font-size: 30px;
  margin-top: 10px;
  margin-bottom: 10px;
}

h2 {
  font-size: 22px;
  margin-top: 10px;
  margin-bottom: 10px;
}

h3 {
  font-size: 18px;
  margin: 0;
}

img {
  border-radius: 12px;
}

#headshot {
  border-radius: 25%;
}

